--- a/src/app/gifs/busqueda/busqueda.component.html
+++ b/src/app/gifs/busqueda/busqueda.component.html
@@ -1,3 +1,5 @@
 <h5>Buscar:</h5>
+<!--keyup.enter se activa al soltar la tecla-->
+<!--#txtBuscar hace referencia al objeto-->
 <input type="text" class="form-control" placeholder="Buscar gifs..."
 (keyup.enter)="buscar()" #txtBuscar>
