--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -3,12 +3,8 @@
   <hr class="text-white">
 
   <div class="list-group list-reset">
-    <a 
-    href="#" 
-    *ngFor="let link of historial"    
-    class="list-group-item list-group-item-action"
-    (click)="buscar(link)"
-    >
+    <!--titlecase para que la busqueda vuelva a verse capitalizada-->
+    <a href="#" *ngFor="let link of historial" class="list-group-item list-group-item-action" (click)="buscar(link)">
       {{link | titlecase}}
     </a>
   </div>
